# minecraft-bots

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: chat.rs  config.rs  lib.rs  main.rs  ui.rs
