[package]
name = "minecraft-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.66"
futures = "0.3.25"

azalea = "0.4.0"
# azalea = { git = "https://github.com/mat-1/azalea", branch = "main", package = "azalea" }
