[package]
name = "minecraft-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0.26", features = ["derive"] }

anyhow = "1.0.66"
futures = "0.3.25"

tracing = "0.1.35"
tracing-subscriber = "0.3"

azalea = "0.4.0"
azalea-protocol = "0.4.0"
azalea-chat = "0.4.0"

tui = "0.19.0"
crossterm = "0.25.0"