[package]
name = "minecraft-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }

clap = { version = "4.0.26", features = ["derive"] }

anyhow = "1.0.66"
futures = "0.3.25"
num_cpus = "1.14.0"

tracing = "0.1.35"
tracing-subscriber = "0.3"

azalea = { git = "https://github.com/mat-1/azalea", branch = "main", package = "azalea" }
azalea-protocol = { git = "https://github.com/mat-1/azalea", branch = "main", package = "azalea-protocol" }
azalea-chat = { git = "https://github.com/mat-1/azalea", branch = "main", package = "azalea-chat" }

tui = "0.19.0"
ansi-to-tui = "2.0.0"
crossterm = "0.25.0"
